# text-to-emojis

./: Cargo.toml  Readme.md
src/: emoji_mappings.rs  lib.rs
